--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"	/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -18,15 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBjW4uytKcokmQ9cRgvppCDPFe29RfDxFA"/>
-        <activity android:name=".Perfil"></activity>
+        <activity android:name=".RecuperarContrasena"></activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBjW4uytKcokmQ9cRgvppCDPFe29RfDxFA" />
+
+        <activity android:name=".Perfil" />
         <activity android:name=".Reportes" />
-        <activity android:name=".localizacion"  />
-        <activity android:name=".RegistroHijo"/>
+        <activity android:name=".localizacion" />
+        <activity android:name=".RegistroHijo" />
         <activity android:name=".Bienvenido" />
-        <activity android:name=".Registro"/>
-        <activity android:name=".MainActivity" android:noHistory="false" >
+        <activity android:name=".Registro" />
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
